[package]
name = "longan-nano-display-network-data"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
longan-nano = { version = "0.3.0", features = ["lcd"] }
embedded-graphics = "0.7.1"
riscv-rt = "0.8.0"
panic-halt = "0.2.0"
riscv = "0.7.0"
httparse = {version = "1.5.1", default-features = false }
heapless = "0.7.7"
nb = "0.1.3"
at-commands = "0.5.0"


[profile.release]
lto = "fat"
opt-level = "z"

